# markapatent-mcp

./: .dockerignore  .gitignore  Dockerfile  README.md  app.py  core.py  mcp_server.py  pyproject.toml
