[project]
name = "patent-mcp"
version = "1.0.0"
description = "TURKPATENT MCP Server - Marka, Patent ve Tasarım Araması"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.14.1",
    "httpx>=0.25.0",
    "capsolver>=1.0.7",
    "cachetools>=5.0.0",
    "pydantic>=2.0.0",
    "uvicorn[standard]>=0.23.0",
]

[project.scripts]
patent-mcp = "mcp_server:main"

[tool.setuptools]
py-modules = ["mcp_server", "core"]
